feat(update statuses):update all statuses - add completed field on a todo - add endpoint to update all completed statuses at once
